--- a/package.json
+++ b/package.json
@@ -32,5 +32,7 @@
     "react-bootstrap": "^0.28.2",
     "react-dom": "^0.14.7"
   },
-  "dependencies": {}
+  "dependencies": {
+    "grunt-contrib-copy": "^0.8.2"
+  }
 }
