--- a/package.json
+++ b/package.json
@@ -17,23 +17,23 @@
   },
   "homepage": "https://github.com/aspyrx/sleepyowl",
   "devDependencies": {
+    "babel-core": "^6.4.5",
+    "babel-loader": "^6.2.2",
+    "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
-    "babelify": "^7.2.0",
     "bootstrap": "^3.3.6",
     "grunt": "^0.4.5",
-    "grunt-browserify": "^4.0.1",
     "grunt-contrib-clean": "^0.7.0",
     "grunt-contrib-connect": "^0.11.2",
-    "grunt-contrib-cssmin": "^0.14.0",
-    "grunt-contrib-htmlmin": "^0.6.0",
+    "grunt-contrib-copy": "^0.8.2",
     "grunt-contrib-less": "^1.2.0",
-    "grunt-contrib-uglify": "^0.11.1",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-webpack": "^1.0.11",
     "react": "^0.14.7",
     "react-bootstrap": "^0.28.2",
-    "react-dom": "^0.14.7"
+    "react-dom": "^0.14.7",
+    "webpack": "^1.12.13",
+    "webpack-dev-server": "^1.14.1"
   },
-  "dependencies": {
-    "grunt-contrib-copy": "^0.8.2"
-  }
+  "dependencies": {}
 }
