--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "grunt-contrib-less": "^1.2.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-webpack": "^1.0.11",
+    "radium": "^0.16.5",
     "react": "^0.14.7",
     "react-bootstrap": "^0.28.2",
     "react-dom": "^0.14.7",
