--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "bootstrap": "^3.3.6",
+    "chart.js": "^1.0.2",
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.7.0",
     "grunt-contrib-connect": "^0.11.2",
@@ -32,6 +33,7 @@
     "radium": "^0.16.5",
     "react": "^0.14.7",
     "react-bootstrap": "^0.28.2",
+    "react-chartjs": "^0.7.3",
     "react-dom": "^0.14.7",
     "webpack": "^1.12.13",
     "webpack-dev-server": "^1.14.1"
